@@ -27,6 +27,8 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+-------------------- 1.7.0 Stable Release [19-Jul-2011] ------------------
+
 17-Jul-2011 Mark Dexter
  # Fix banner issue in sample data (Elin Waring)
 
